--- a/index.html
+++ b/index.html
@@ -368,9 +368,7 @@
       <div id="footer">
         <div class="contact">
           <a href="indext.html"><img src="images/logo.png" alt="" /></a>
-          <br> <br>
-          <br> 
-          <h3>Contact</h3>
+          <h3 style="margin-top: 30px;">Contact</h3>
           <address>
             <p><b>Address:</b> Wellington Road, Street 32. San Francisco</p>
             <p><b>Phone:</b> Wellington Road, Street 32. San Francisco</p>
